# typelessless

./: .gitignore  CLAUDE.md  Makefile  README.md  package-lock.json  package.json
.github/workflows/: build-macos-manual.yml  ci.yml  release.yml
scripts/: generate-icons.mjs
src/: index.html  recorder.css  recorder.js  settings.css  settings.html  settings.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  config.rs  lib.rs  main.rs  paste.rs  recording.rs  state.rs  stt.rs  tray.rs
