[package]
name = "typelessless"
version = "0.1.4"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
cpal = { version = "0.16", features = [] }
arboard = "3"
enigo = "0.3"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
base64 = "0.22"
hound = "3.5"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
tauri = { version = "2", features = ["macos-private-api"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
